# app/api/openapi/main_api.yaml
@@ -284,7 +284,7 @@ components:
     CriticInput:
       type: array
       minLength: 1
-      example: [ [ 1,2,3,4,5,1 ],[ 5,6,7,8,5,2],[ -1,-2,-3,-4, -5,3 ] ]
+      example: [ [ 1,2,3,4,5],[ 5,6,7,8,5],[ -1,-2,-3,-4,-5] ]
       items:
         $ref: '#/components/schemas/StateAction'
     ActorWeights:
@@ -363,11 +363,7 @@ components:
         batch_size:
           description: learning batch size
           type: integer
-          example: 256
-        n_actions:
-          description: number of actions generated by PID
-          type: integer
-          example: 2
+          example: 64
         min_action:
           description: PID action low limit
           type: number
@@ -398,7 +394,7 @@ components:
         format: double
       minLength: 6
       maxLength: 6
-      example: [ 1,2,3,4,5,6 ]
+      example: [ 1,2,3,4,5]
     Sample:
       type: object
       properties:
