# app/model/agent.py
@@ -3,14 +3,11 @@ from tensorflow.keras.optimizers import Adam
 import tensorflow as tf
 import numpy as np
 from app.model.buffer import get_buffer_sample
-from app.model.settings import data_dir
+from app.model.settings import get_settings_file_path
 from os import path
 import json
 from app.model.actor import ActorNetwork
 from app.model.critic import CriticNetwork
-
-
-agent_settings_path = path.join(data_dir, 'agent.json')
 
 
 def get_loaded_agent(load_models=True):
@@ -22,32 +19,29 @@ def get_loaded_agent(load_models=True):
 
 
 def load_agent_settings():
-    if path.exists(agent_settings_path):
-        with open(agent_settings_path, mode='r') as file:
+    if path.exists(get_settings_file_path()):
+        with open(get_settings_file_path(), mode='r') as file:
             settings = json.load(file)
         return settings
     return Agent().get_settings()
 
 
 def save_agent_settings(settings):
+    need_reload = False
     previous_agent = get_loaded_agent(False)
     previous_settings = previous_agent.get_settings()
-    with open(agent_settings_path, mode='w') as file:
+    with open(get_settings_file_path(), mode='w') as file:
         json.dump(previous_settings | settings, file)
     new_agent = get_loaded_agent(False)
     if have_agents_structural_differences(previous_agent, new_agent):
         new_agent.save_models()
+        need_reload = True
+    return need_reload
 
 
 def delete_file_if_exists(checkpoint_file):
     if path.exists(checkpoint_file):
         os.remove(checkpoint_file)
-
-
-def get_normalized_tensor(tensor):
-    result = tensor - tensor.mean(axis=0)
-    result /= result.std(axis=0)
-    return tf.cast(tf.where(tf.math.is_nan(result), tf.zeros_like(result), result), dtype=tf.float32)
 
 
 @tf.function
@@ -57,16 +51,15 @@ def update_target(target_weights, weights, tau):
 
 
 class Agent:
-    def __init__(self, use_p=True, use_i=True, use_d=True, use_iu=True, n_actions=2, alpha=0.001, beta=0.001,
+    def __init__(self, use_p=True, use_i=True, use_d=True, use_iu=True, alpha=0.001, beta=0.001,
                  gamma=0.99, tau=0.05, fc1=64, fc2=64, batch_size=256, min_action=0, max_action=100):
-        self.n_actions = n_actions
+        self.n_actions = 1
         self.used_states = np.array([use_p, use_i, use_d, use_iu])
         self.alpha = alpha
         self.beta = beta
         self.tau = tau
         self.batch_size = batch_size
         self.gamma = gamma
-        self.n_actions = n_actions
         self.min_action = min_action
         self.max_action = max_action
         self.fc1 = fc1
@@ -77,10 +70,12 @@ class Agent:
         self.actor = ActorNetwork(self.n_inputs, name='actor',
                                   min_action=self.min_action, max_action=self.max_action)
         self.critic = CriticNetwork(self.n_inputs + self.n_actions, fc1_dims=self.fc1, fc2_dims=self.fc2, name='critic')
-        self.target_actor = ActorNetwork(self.n_inputs,  name='target_actor', min_action=self.min_action,
+        self.target_actor = ActorNetwork(self.n_inputs, name='target_actor', min_action=self.min_action,
                                          max_action=self.max_action)
         self.target_critic = CriticNetwork(self.n_inputs + self.n_actions, fc1_dims=self.fc1, fc2_dims=self.fc2,
                                            name='target_critic')
+        self.actor.model.compile(self.actor_optimizer)
+        self.critic.model.compile(self.critic_optimizer)
 
     def get_n_inputs(self):
         n_inputs = 0
@@ -92,9 +87,38 @@ class Agent:
     def get_settings(self):
         used_states = [bool(s) for s in iter(self.used_states)]
         return {"use_p": used_states[0], "use_i": used_states[1], "use_d": used_states[2],
-                "use_iu": used_states[3], "n_actions": self.n_actions, "alpha": self.alpha, "beta": self.beta,
+                "use_iu": used_states[3], "alpha": self.alpha, "beta": self.beta,
                 "gamma": self.gamma, "tau": self.tau, "fc1": self.fc1, "fc2": self.fc2, "batch_size": self.batch_size,
                 "min_action": self.min_action, "max_action": self.max_action}
+
+    def set_settings(self, settings):
+        if "use_p" in settings:
+            self.used_states[0] = settings["use_p"]
+        if "use_i" in settings:
+            self.used_states[1] = settings["use_i"]
+        if "use_d" in settings:
+            self.used_states[2] = settings["use_d"]
+        if "use_iu" in settings:
+            self.used_states[3] = settings["use_iu"]
+        self.n_inputs = self.get_n_inputs()
+        if "alpha" in settings:
+            self.gamma = settings["alpha"]
+        if "beta" in settings:
+            self.tau = settings["beta"]
+        if "gamma" in settings:
+            self.gamma = settings["gamma"]
+        if "tau" in settings:
+            self.tau = settings["tau"]
+        if "fc1" in settings:
+            self.fc1 = settings["fc1"]
+        if "fc2" in settings:
+            self.fc2 = settings["fc2"]
+        if "batch_size" in settings:
+            self.batch_size = settings["batch_size"]
+        if "min_action" in settings:
+            self.min_action = settings["min_action"]
+        if "max_action" in settings:
+            self.max_action = settings["max_action"]
 
     def update_network_parameters(self, tau_actor=None, tau_critic=None):
         if tau_actor is None:
@@ -125,17 +149,15 @@ class Agent:
                 i += 1
         return result
 
-    def save_models(self, save_actor=True):
-        if save_actor:
+    def save_models(self, critic_only=False):
+        if not critic_only:
             self.actor.save()
+            self.target_actor.save()
         self.critic.save()
-        self.target_actor.save()
         self.target_critic.save()
 
     def build_models(self):
         need_update_network = not path.exists(self.target_actor.checkpoint_file)
-        self.actor.model.compile(self.actor_optimizer)
-        self.critic.model.compile(self.critic_optimizer)
         self.actor.load()
         self.critic.load()
         self.target_actor.load()
@@ -144,17 +166,12 @@ class Agent:
         if need_update_network:
             self.update_network_parameters(tau_actor=1, tau_critic=1)
 
-    def get_actor_saturated(self, states, actor: tf.keras.Model, training=True):
-        output = actor(states, training=training)
-        output = (tf.keras.activations.sigmoid(output)*(self.max_action - self.min_action)) + self.min_action
-        return output
-
     @tf.function
-    def train(self, states, new_states, actions, rewards, steps, prev_steps, train_actor):
+    def train(self, states, new_states, actions, rewards, train_actor):
         with tf.GradientTape() as tape:
             target_actions = self.target_actor(new_states, training=True)
-            critic_value_ = self.target_critic(new_states, target_actions, steps, training=True)
-            critic_value = self.critic(states, actions, prev_steps, training=True)
+            critic_value_ = self.target_critic(new_states, target_actions, training=True)
+            critic_value = self.critic(states, actions, training=True)
             target = rewards + self.gamma * critic_value_
             critic_loss = tf.math.reduce_mean(tf.math.square(target - critic_value))
         critic_network_gradient = tape.gradient(critic_loss, self.critic.model.trainable_variables)
@@ -163,28 +180,25 @@ class Agent:
         if train_actor:
             with tf.GradientTape() as tape:
                 new_policy_actions = self.actor(states, training=True)
-                actor_loss = self.critic(states, new_policy_actions, prev_steps, training=True)
+                actor_loss = self.critic(states, new_policy_actions, training=True)
                 actor_loss = -tf.math.reduce_mean(actor_loss)
 
             actor_network_gradient = tape.gradient(actor_loss, self.actor.model.trainable_variables)
-            tf.debugging.check_numerics(actor_network_gradient, message="actor_loss:{}".format(actor_loss),
-                                        name="training actor")
+            tf.debugging.check_numerics(actor_network_gradient, message="actor_loss:{}".format(actor_loss))
             self.actor_optimizer.apply_gradients(zip(actor_network_gradient, self.actor.model.trainable_variables))
 
     def learn(self, train_actor):
-        used_batch_size, state, action, reward, new_state, step = get_buffer_sample(batch_size=self.batch_size)
-        states = get_normalized_tensor(state[:, self.used_states])
+        used_batch_size, state, action, reward, new_state = get_buffer_sample(batch_size=self.batch_size)
+        states = tf.convert_to_tensor(state[:, self.used_states], dtype=tf.float32)
         actions = self.actor(states, training=False)
         rewards = tf.convert_to_tensor(reward, dtype=tf.float32)
-        new_states = get_normalized_tensor(new_state[:, self.used_states])
-        steps = get_normalized_tensor(step)
-        prev_steps = get_normalized_tensor(step-1)
+        new_states = tf.convert_to_tensor(new_state[:, self.used_states], dtype=tf.float32)
 
-        self.train(states, new_states, actions, rewards, steps, prev_steps, train_actor)
+        self.train(states, new_states, actions, rewards, train_actor)
         self.update_network_parameters(tau_actor=(None if train_actor else 0))
         return used_batch_size
 
 
 def have_agents_structural_differences(agent_1: Agent, agent_2: Agent):
     return agent_1.fc1 != agent_2.fc1 or agent_1.fc2 != agent_2.fc2 or \
-           agent_1.n_inputs != agent_2.n_inputs or agent_1.n_actions != agent_2.n_actions
+           agent_1.n_inputs != agent_2.n_inputs
